# terrain_property_prediction

./: .gitignore  .gitmodules  README.md
src/: frames.gv
src/aliengo_dynamics_computer/: CMakeLists.txt  Doxyfile  README.md  data_from_pinnochio  package.xml
src/aliengo_dynamics_computer/config/: aliengo_force_transformation_config.yaml  foce_magnitude_rqt_multiplot.xml  force_component_comparison_rqt_multiplot.xml  pinocchio_debug.xml  torque_plot.xml
src/aliengo_dynamics_computer/doc/: manifest.yaml
src/aliengo_dynamics_computer/html/: CMakeLists_8txt.html  README_8md.html  annotated.html  classes.html  dir_000002_000000.html  (+29 more)
src/aliengo_wild_visual_navigation/: CMakeLists.txt  package.xml
src/aliengo_wild_visual_navigation/config/rviz/: rviz_visualization.rviz
src/aliengo_wild_visual_navigation/config/wild_visual_navigation/: aliengo.yaml  camera.yaml
src/aliengo_wild_visual_navigation/launch/: aliengo_sim.launch  aliengo_wild_visual_navigation.launch  sphere_test.launch
src/aliengo_wild_visual_navigation/rviz/: rviz_visualization.rviz
src/aliengo_wild_visual_navigation/scripts/: aliengo_state_converter_node.py  aliengo_state_converter_node_test.py  gazebo_world_publisher.py
src/aliengo_wild_visual_navigation/urdf/: sphere_model.urdf
src/aliengo_wild_visual_navigation/worlds/: agriculture_world.world  empty_terrain_test.world  inspection_world.world  outdoor.world  simple_terrain_test.world  terrain_test_world.world
src/aliengo_wild_visual_navigation/xacro/: aliengo.champ.urdf  pinnochio_aliengo.champ.urdf
src/unitree_gazebo/: package.xml
(+121 files in other folders)
